# reeder

./: .envrc  .gitignore  Caddyfile  Caddyfile.dev  LICENSE  Makefile  PKGBUILD  README.md  config.dev.toml  config.toml  dev-setup.sh  install.sh  pyproject.toml  reeder.install
docs/: job-format.md  systemd-testing.md  voices.md
systemd/: reeder.path  reeder.service  reeder.timer
systemd-pkg/: reeder-web.service  reeder.path  reeder.service
systemd/user/: reeder-web.service  reeder.path  reeder.service  reeder.timer
templates/: bookmarklet.html  index.html
